[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pynalog"
version = "0.0.2"
description = "Logging manager for data analysis with pynapple"
readme = "README.md"
authors = [{ name = "Guillaume Viejo", email = "guillaume.viejo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pynapple"]
dependencies = [
    "numpy",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
	"black", 
	"bumpver", 
	"isort", 
	"pip-tools", 
	"pytest",
	"flake8",
	"pylint",
	"coverage"
	]

[project.urls]
Homepage = "https://github.com/PeyracheLab/pynalog"


[tool.black]
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = false
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.md
    | \.toml
    | \.cfg
    | \.txt
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
